Fixing learn page errors and a wrong size for insets

--- a/cfgov/unprocessed/css/molecules/inset.less
+++ b/cfgov/unprocessed/css/molecules/inset.less
@@ -37,7 +37,7 @@
 
     .respond-to-min(@bp-med-min, {
         float: right;
-        width: unit( @grid_gutter-width / @base-font-size-px, em );
+        width: unit( 270px / @base-font-size-px, em );
         margin-left: unit( @grid_gutter-width / @base-font-size-px, em );
     });
 
